Fix overlay bracket spacing

--- a/resources/assets/sass/sections/_filters-overlay.scss
+++ b/resources/assets/sass/sections/_filters-overlay.scss
@@ -63,7 +63,7 @@
 
 .nav-num {
 	font: $body--mono;
-    width: 44px;
+    width: 46px;
 	position: absolute;
 	right: 0;
 	top: 0;
